rnsc/test_data/integration/error/parser/type_hints/float/not_f32_with_space.rns
.class @float "not a float" ; <- has space and should be quoted in help
.super java/lang/Object
